# COMP90025-Parallel-Multicore-Computing

./: .gitignore
Project2A/: Makefile  TestCoreSetting.cpp  check.py  myTest  p3  parallel  parallel10  parallel10_easy  parallel2  parallel2_easy  parallel2_medium  parallel4  parallel4_easy  parallel4_medium  parallel7  parallel_easy  parallel_medium  renjie  renjie_easy  renjie_medium  renjiem-seqalignomp.cpp  seq  seq_easy  seq_medium  seqalign.cpp  seqalign_parallel.cpp  seqalign_parallel10.cpp  seqalign_parallel2.cpp  seqalign_parallel3.cpp  seqalign_parallel4.cpp  seqalign_parallel7.cpp  seqential  tes  test
Project2B/: 12node-16core.slurm  4node-16core.slurm  8node-16core.slurm  feature_test.cpp  ft  mpi-20252150.out  mpi-20252748.out  mpi-4n16c-20242177.out  mpi-4n16c-20248725.out  mpi-4n16c-20252151.out  mpi-8n16c-20242728.out  mpi-8n16c-20247746.out  mpi-8n16c-20248992.out  mseq.out  p2  p2.cpp  p2.out  p3  p3.cpp  (+9 more)
nbody/: 10n1c_1000_nlogn.out  10n1c_100_nlogn.out  10n1c_10_nlogn.out  10n1c_1500_nlogn.out  10n1c_2000_nlogn.out  10n1c_2500_nlogn.out  10n1c_3500_nlogn.out  10n1c_4000_nlogn.out  10n1c_5000_nlogn.out  10node.slurm  12n1c_10000_nlogn.out  12n1c_1000_nlogn.out  12n1c_100_nlogn.out  12n1c_10_nlogn.out  12n1c_1500_nlogn.out  12n1c_2500_nlogn.out  12n1c_3000_nlogn.out  12n1c_5000_nlogn.out  12node.slurm  16node.slurm  1n1c_1000_nlogn.out  1n1c_100_nlogn.out  1n1c_10_nlogn.out  1n1c_1500_nlogn.out  1n1c_2500_nlogn.out  1n1c_4000_nlogn.out  1n1c_5000_nlogn.out  1node.slurm  2n1c_1000_nlogn.out  2n1c_100_nlogn.out  2n1c_10_nlogn.out  2n1c_1500_nlogn.out  2n1c_2500_nlogn.out  2n1c_5000_nlogn.out  2node.slurm  4n1c_1000_nlogn.out  4n1c_100_nlogn.out  4n1c_10_nlogn.out  4n1c_1500_nlogn.out  4n1c_2500_nlogn.out  (+153 more)
nbody/.ipynb_checkpoints/: plot-checkpoint.ipynb
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  openmp.cpp  openmp.h
(+17 files in other folders)
